# src/main/java/com/kuba/GymTrackerAPI/auth/LoginRequestDTO.java
@@ -3,7 +3,7 @@ package com.kuba.GymTrackerAPI.auth;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
 
-public record LoginRequest(
+public record LoginRequestDTO(
         @NotNull(message = "Emailová adresa nesmí být prázdná!")
         @NotBlank(message = "Emailová adresa nesmí být prázdná!")
         String email,
