# src/main/java/com/kuba/GymTrackerAPI/auth/RegisterRequestDTO.java
@@ -5,7 +5,7 @@ import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Pattern;
 
-public record RegisterRequest(
+public record RegisterRequestDTO(
         @NotNull(message = "Emailová adresa nesmí být prázdná!")
         @NotBlank(message = "Emailová adresa nesmí být prázdná!")
         @Email(
